@@ -30,6 +30,7 @@ Verilator 5.003 devel
 * Fix wait 0.
 * Fix comparing ranged slices of unpacked arrays.
 * Fix empty string literals converting to string types (#3774). [miree]
+* Fix lint_off EOFNEWLINE in .vlt files (#3796). [Andrew Nolte]
 
 
 Verilator 5.002 2022-10-29
